...
    <string name="mirror_waiting_permission">Waiting for screen permission\u2026</string>
    <string name="wrong_screen_message">Megingiard needs to run on the bottom screen.\nPlease move the app to continue.</string>
    <string name="cd_wrong_screen_arrow">Arrow pointing to bottom screen</string>
    <string name="mirror_start_button">Start mirroring</string>
    <string name="cd_previous_tool">Previous tool</string>
    <string name="cd_next_tool">Next tool</string>
    <string name="cd_stop_mirroring">Stop Mirroring</string>
    <string name="cd_start_mirroring">Start Mirroring</string>
    <string name="cd_freeze">Freeze</string>
    <string name="cd_unfreeze">Unfreeze</string>
    <string name="cd_screenshot">Screenshot</string>
    <string name="cd_lock_view">Lock view</string>
    <string name="cd_unlock_view">Unlock view</string>
    <string name="cd_touch_projection_on">Touch Projection on</string>
    <string name="cd_touch_projection_off">Touch Projection off</string>
    <string name="cd_frozen_image">Frozen Stream Image</string>
    <string name="notification_mirroring_active">Mirroring active</string>
...
